--- a/CC-Electron/src/renderer/styles/general.css
+++ b/CC-Electron/src/renderer/styles/general.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     margin: 0;
-    /* outline: 1px solid yellow; */
+    outline: 1px solid yellow;
     outline: none;
     padding: 0;
     
