--- a/CC-Electron/src/renderer/styles/layout-variables.css
+++ b/CC-Electron/src/renderer/styles/layout-variables.css
@@ -206,8 +206,8 @@ html {
 
     /* ==== vctr -> Video Container ==== */
     --vctr-bradius: 10px;
-    --vctr-height: 75%;
-    --vctr-width: 80%;
+    --vctr-height: 525px;
+    --vctr-width: 1100px;
 
     /* ==== ppoverlayicon -> Play Pause Overlay Icon ==== */
     --ppoverlayicon-length: 80px;
@@ -325,7 +325,7 @@ html {
     /* ==== cbar -> Clip Bar ==== */
     --cbar-hgap: 30px;
     --cbar-vpadding: calc(5px - var(--cctr-bwidth));
-    --cbar-width: calc(50px + 3 * var(--cbar-hgap) + 2 * var(--cstpill-width) + 2 * var(--cobtn-width));
+    --cbar-width: calc(50px + 4 * var(--cbar-hgap) + 3 * var(--cstpill-width) + 2 * var(--cobtn-width));
 
     /* ==== cstpill -> Clip Setting Pill ==== */
     --cstpill-bwidth: 1.5px;
@@ -333,7 +333,7 @@ html {
     --cstpill-vgap: 5px;
     --cstpill-vpadding: calc(var(--sctr1-vpadding) - var(--cstpill-bwidth));
     --cstpill-hpadding: calc(var(--sctr1-hpadding) - var(--cstpill-bwidth));
-    --cstpill-width: 200px;
+    --cstpill-width: 150px;
 
     /* ==== cstlabel -> Clip Setting Label ==== */
     --cstlabel-fsize: 17px;
