--- a/CC-Electron/src/renderer/styles/theme-variables.css
+++ b/CC-Electron/src/renderer/styles/theme-variables.css
@@ -273,6 +273,18 @@ html[data-theme='dark'] {
     --stticon-fill: #5a5a5a;
     --stticon-alt-fill: #2da347;
 
+    /* ==== stsliderctr -> Setting Slider Container ==== */
+    --stsliderctr-bgcolor: #5a5a5a;
+
+    /* ==== sttrack -> Setting Track ==== */
+    --sttrack-bgcolor: #dddddd;
+
+    /* ==== stoverlay -> Setting Overlay ==== */
+    --stoverlay-lgradientcolor: #00a9ff;
+
+    /* ==== stthumb -> Setting Thumb ==== */
+    --stthumb-bgcolor: #00a9ff;
+
     /* ==== stdesc -> Setting Description ==== */
     --stdesc-color: #dddddd;
 }
@@ -537,6 +549,18 @@ html[data-theme='light'] {
     --stticon-bgcolor: white;
     --stticon-fill: #acb5c4;
     --stticon-alt-fill: #2da347;
+
+    /* ==== stsliderctr -> Setting Slider Container ==== */
+    --stsliderctr-bgcolor: #dfe1e5;
+
+    /* ==== sttrack -> Setting Track ==== */
+    --sttrack-bgcolor: #dddddd;
+
+    /* ==== stoverlay -> Setting Overlay ==== */
+    --stoverlay-lgradientcolor: #00a9ff;
+
+    /* ==== stthumb -> Setting Thumb ==== */
+    --stthumb-bgcolor: #00a9ff;
 
     /* ==== stdesc -> Setting Description ==== */
     --stdesc-color: #363636;
